--- a/style.css
+++ b/style.css
@@ -92,3 +92,51 @@ nav.main-nav a{
 nav.main-nav a:hover{
   color: #009acd;
 }
+
+/* Main Area */
+.content{
+  margin-top:30px;
+  line-height:1.5em;
+}
+
+.main{
+  width: 65%;
+  float: left;
+}
+
+.side{
+  width: 30%;
+  float: right;
+}
+
+.block{
+  border:#ccc 1px solid;
+  padding:5px 15px 25px 15px;
+  background:#fcfcfc;
+  overflow:hidden;
+}
+
+.block h3{
+  border-bottom:#ccc solid 1px;
+  padding-bottom:10px;
+}
+
+/* Article */
+article.post{
+  border-bottom: #ccc solid 1px;
+  margin-bottom:10px;
+  padding-bottom:20px;
+}
+
+article.post .meta{
+  background:#009acd;
+  color:#fff;
+  padding:7px;
+}
+
+.button{
+  background:#009acd;
+  color:#fff;
+  padding:10px 15px;
+  display:inline-block;
+}
